--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="./src/assets/favicon.ico" />
+		<link rel="icon" href="img/favicon.ico" />
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="./src/assets/apple-touch-icon.png"
+			href="img/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="./src/assets/favicon-32x32.png"
+			href="img/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="./src/assets/favicon-16x16.png"
+			href="img/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="./src/assets/site.webmanifest" />
+		<link rel="manifest" href="img/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wayne</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
