--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./src/styles/global.css" />
+		<script src="/src/model.js"></script>
 	</head>
 	<body>
 		<div id="app"></div>
