--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		/>
 		<link rel="manifest" href="img/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wayne</title>
+		<title>Wayne Cen</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
